--- a/Lab 4/bulb.html
+++ b/Lab 4/bulb.html
@@ -9,7 +9,7 @@
 
 <body>
 
-  <img src="on.jpg" alt="" id="bulb">
+  <img src="on.jpg" alt="lightbulb on" id="bulb">
 
 
   <script type="text/javascript" src="bulb.js"></script>
